# catch23_robot_controller

./: CMakeLists.txt  README.md  package.xml
action/: ArmTrajectoryAction.action
include/main_arm_controller/: arm_trajectory_action.hpp  arm_trajectory_service.hpp  c620_test.hpp  joystick_state.hpp  main_arm_controller.hpp  one_grab_hand_node.hpp  robot_state.hpp  shooter_node.hpp  state_publisher_node.hpp  visibility.hpp
include/main_arm_controller/trajectory/: r_theta_optimal_planning.hpp  spline_utils.hpp
include/main_arm_controller/utils/: joystick_state.hpp  robot_state.hpp  system_classes.hpp  util_functions.hpp
launch/: c620_test_launch.py  main_arm_controller_launch.py
msg/: ArmState.msg  OneHandRequest.msg  ShooterState.msg  TipState.msg
params/: actuator_params.yaml
src/: arm_trajectory_action.cpp  arm_trajectory_service.cpp  c620_test.cpp  joystick_state.cpp  main_arm_controller.cpp  one_grab_hand_node.cpp  robot_state.cpp  shooter_node.cpp  state_publisher_node.cpp
src/trajectory/: r_theta_optimal_planning.cpp  spline_utils.cpp
src/utils/: joystick_state.cpp  robot_state.cpp  system_classes.cpp  util_functions.cpp
srv/: ArmTrajectorySrv.srv
